# sony-camera-server

./: README.md  pyproject.toml  setup.cfg  test.py
src/: sony_camera_server.py  sony_imgdev.py  sony_media_transfer.py  sony_mjpeg_streamer.py  sony_snap_postview.py  sony_streams.py  ssdp.py
src/res/: index.html  script.js  styling.css
src/sony_camera_server/: device_cache.py  sony_camera_server.py  sony_http_server.py  sony_imgdev.py  sony_media_erase.py  sony_media_transfer.py  sony_snap_postview.py  sony_snap_transfer.py  sony_streams.py  ssdp.py  xml2dict.py
src/sony_camera_server/res/: index.html  script.js
