[metadata]
name = sony-camera-server
version = 0.0.2
author = Gustaf Waldemarson
author_email = gustaf.waldemarson@gmail.com
description = A package for controlling Sony Imaging Devices
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Xaldew/sony-camera-server
project_urls =
    Bug Tracker = https://github.com/Xaldew/sony-camera-server/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.package_data]
* = *.html, *.js, *.css, *.svg

[options.entry_points]
console_scripts =
    sony-camera-server = sony_camera_server.sony_http_server:run
    sony-media-transfer = sony_camera_server.sony_media_transfer:run
    sony-snap-postview = sony_camera_server.sony_snap_postview:run
    sony-snap-transfer = sony_camera_server.sony_snap_transfer:run